fixed alignment for about section

--- a/portfolio/src/styles/About.css
+++ b/portfolio/src/styles/About.css
@@ -2,8 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 80%;
-    padding: 5%;
+    width: 95%;
 }
 
 .text{
