--- a/portfolio/src/styles/Header.css
+++ b/portfolio/src/styles/Header.css
@@ -1,4 +1,5 @@
 .header {
+    width: 100%;
     padding: 1%;
     display: flex;
     align-items: baseline;
